First concept of the discord whitelist feature